[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40", default-features = false }

[features]
default = ["std"]
std = [
    "sp-runtime-interface/std",
]
